hard-gists/1251716/run.log
=== Docker Run Log for 1251716 ===
Started at: Mi 29. Okt 12:02:13 CET 2025

[2025-10-29 12:02:13] START: Running container for 1251716
[2025-10-29 12:02:13] SUCCESS: Container 6f2bce1b9372bd1812bf695a80486054e3f95d02cf6ce805989c350491dd7b07 started for 1251716
=== Container logs for 1251716 ===
  File "/snippet.py", line 16
    region = sublime.Region(0L, view.size())
                            ^
SyntaxError: invalid decimal literal
=== End of logs for 1251716 ===
[2025-10-29 12:02:15] INFO: Container 6f2bce1b9372bd1812bf695a80486054e3f95d02cf6ce805989c350491dd7b07 has stopped
